Mappers were created to substitute converters. Validation was moved to marker controller. Marker services were adapted to these changes. MapStruct dependency was added to pom.